--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -7023,3 +7023,96 @@ a.disabled {
     -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
+
+.v-center{
+    position: relative;
+    top: 50%;
+    transform: translateY(calc(-50% - 40px)) !important;
+}
+
+.chip {
+    border-radius: 15px;
+    min-width: 50px;
+    height: 32px;
+    margin-left: 5px;
+    margin-top: 5px;
+    line-height: 30px;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    vertical-align: middle;
+    border: 1px solid;
+}
+
+.chip[disabled] {
+    cursor: not-allowed;
+    background-color: #a2a2a2 !important;
+    pointer-events: none;
+}
+
+.chip-value {
+    width: 100%;
+    white-space: nowrap;
+    text-align: left;
+}
+
+.chip-addon {
+    align-items: center;
+    font-size: 20px;
+    vertical-align: middle;
+    border-radius: 50%;
+    line-height: 20px;
+}
+
+.chip-addon i {
+    font-size: 20px;
+    border-radius: 50%;
+    line-height: 32px;
+    width: 32px;
+    height: 32px;
+    margin: 0 0px 0 -12px;
+}
+
+.chip-addon img {
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    margin: 0 8px 0 -12px;
+}
+
+.chip-addon span {
+    line-height: 32px;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    margin: 0 8px 0 -12px;
+    float: left;
+    font-size: 16px;
+}
+
+.chip-remove {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+}
+
+.chip-remove .material-icons {
+    font-size: 20px;
+    vertical-align: middle;
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+}
+
+.chip-remove[readonly] {
+    pointer-events: none;
+}
+
+.chip-remove[disabled] .material-icons {
+    background-color: #a2a2a2 !important;
+    cursor: not-allowed;
+}
