add missing styles

--- a/domino-ui-demo/ui-demo.css
+++ b/domino-ui-demo/ui-demo.css
@@ -150,3 +150,17 @@ code {
     border: 1px solid #F44336;
 }
 
+
+.demo-layout-section{
+    background-color: #777777;
+    border: 1px solid #999999;
+    text-align: center;
+    color: #FFF;
+}
+
+.demo-layout-section span{
+    position: relative;
+    top : 50%
+}
+
+
